# godelian-assist

./: .gitignore  CLAUDE.md  PROPOSAL.md  README.md  feature_list.json  pyproject.toml
.claude-plugin/: marketplace.json
agent/: README.md
agent/prompts-game/: implement_feature.md  iterate_on_feedback.md
agent/prompts-godot/: coding_prompt.md  validation_prompt.md
cookbook/: README.md
cookbook/api-ref/: AnimationPlayer.md  Area3D.md  AudioStreamPlayer.md  CharacterBody3D.md  NavigationAgent3D.md  Resource.md  RigidBody3D.md  Signal.md  tscn-format.md
cookbook/claude-md/: README.md  agent.md  fullstack.md  godot.md  minimal.md  python.md  typescript.md
cookbook/hooks/: README.md  auto-format.md  auto-lint.md  commit-gate.md  designer-approval.md  doc-updater.md  game-session.md  godot-quality.md  marketplace-sync.md  test-runner.md
cookbook/mcp/: README.md  anthropic-cookbook.md  filesystem.md  gdai-mcp.md  gdscript-lsp.md  github.md  godot-mcp-minimal.md  sqlite.md
demo/fps-controller/: README.md
docs/gdd/: README.md
plans/: check_spec.py
plans/active/: v2-implementation-plan.md
plans/research/: phase-a-mcp.md  phase-c-tscn-format.md
plugins/agent-patterns/: README.md
plugins/context-sync/: README.md
plugins/designer-brief/: README.md
plugins/eval-framework/: README.md
plugins/game-backlog/: README.md
plugins/game-design/: README.md
plugins/gdscript-guide/: README.md
plugins/godot-audio/: README.md
plugins/godot-patterns/: README.md
tools/: hook_validator.py  mark_passing.py  marketplace_gen.py  plan_manager.py  skill_loader.py
(+146 files in other folders)
